--- a/swagger/index.html
+++ b/swagger/index.html
@@ -21,23 +21,56 @@
     </style>
   </head>
   <body>
+    <select name="apiV" id="apiV">
+      <option value="v1.1">v1.1</option>
+      <option value="v1.2">v1.2</option>
+    </select>
     <div id="redoc-container"></div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.48/bundles/redoc.standalone.min.js"></script>
     <script>
-      var host = window.location.protocol + "//" + window.location.host;
-      var s = document.createElement("script");
+      let searchParams = new URLSearchParams(window.location.search);
+      let host = window.location.protocol + "//" + window.location.host;
+
+      let s = document.createElement("script");
       s.setAttribute("src", host + "/try.js");
       document.body.appendChild(s);
 
+      let openapi = "openapi.json";
+      if (searchParams.has("version")) {
+        switch (searchParams.get("version")) {
+          case "v1.1":
+            openapi = "openapi.json";
+            break;
+          case "v1.2":
+            openapi = "openapi2.json";
+            $("#apiV").val("v1.2").change();
+            break;
+          default:
+            openapi = "openapi.json";
+            break;
+        }
+      }
+
       (function initOpenApi() {
         try {
-          initTry(host + `/openapi.json`);
+          initTry(host + `/` + openapi);
         } catch (error) {
           setTimeout(() => {
             initOpenApi();
           }, 1000);
         }
       })();
+    </script>
+
+    <script>
+      $(document).on("change", "#apiV", function () {
+        window.location.href = host + "/?version=" + $(this).val();
+      });
     </script>
   </body>
 </html>
