--- a/swagger/index.html
+++ b/swagger/index.html
@@ -2,17 +2,12 @@
 <html>
   <head>
     <title>ReDoc</title>
-    <!-- needed for adaptive design -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
     />
-
-    <!--
-    ReDoc doesn't change outer page styles
-    -->
     <style>
       body {
         margin: 0;
@@ -21,10 +16,6 @@
     </style>
   </head>
   <body>
-    <select name="apiV" id="apiV">
-      <option value="v1.1">v1.1</option>
-      <option value="v1.2">v1.2</option>
-    </select>
     <div id="redoc-container"></div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -41,14 +32,14 @@
       document.body.appendChild(s);
 
       let openapi = "openapi.json";
+      let version = searchParams.get("version") ?? "v1.1";
       if (searchParams.has("version")) {
-        switch (searchParams.get("version")) {
+        switch (version) {
           case "v1.1":
             openapi = "openapi.json";
             break;
           case "v1.2":
             openapi = "openapi2.json";
-            $("#apiV").val("v1.2").change();
             break;
           default:
             openapi = "openapi.json";
@@ -59,6 +50,7 @@
       (function initOpenApi() {
         try {
           initTry(host + `/` + openapi);
+          loadme(version);
         } catch (error) {
           setTimeout(() => {
             initOpenApi();
@@ -68,8 +60,37 @@
     </script>
 
     <script>
+      function loadme(version) {
+        let selectInsert = $("div.sc-AxhCb.iWvlZG.api-info");
+        if (selectInsert.length == 0) {
+          setTimeout(() => {
+            loadme(version);
+          }, 1000);
+        } else {
+          selectInsert.append(`
+            <div style="margin-top:10px">
+              <label style="float: left;margin-right:10px"> Select version</label>
+              <select
+                style="float: left; width: 80px"
+                name="apiV"
+                id="apiV"
+                class="form-select form-select-sm"
+                aria-label=".form-select-sm example"
+              >
+                <option value="v1.1">v1.1</option>
+                <option value="v1.2">v1.2</option>
+              </select>
+            </div>
+          `);
+          $("#apiV").val(version).change();
+        }
+      }
       $(document).on("change", "#apiV", function () {
-        window.location.href = host + "/?version=" + $(this).val();
+        window.location.href =
+          window.location.origin +
+          window.location.pathname +
+          "?version=" +
+          $(this).val();
       });
     </script>
   </body>
