--- a/swagger/index.html
+++ b/swagger/index.html
@@ -8,12 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
     />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://serverless-redoc.s3.amazonaws.com/style.css"
+    />
   </head>
   <body>
     <div id="redoc-container"></div>
