--- a/swagger/index.html
+++ b/swagger/index.html
@@ -8,10 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://serverless-redoc.s3.amazonaws.com/style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="redoc-container"></div>
@@ -21,6 +18,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.48/bundles/redoc.standalone.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
       let searchParams = new URLSearchParams(window.location.search);
       let host = window.location.protocol + "//" + window.location.host;
@@ -30,20 +28,7 @@
       document.body.appendChild(s);
 
       let openapi = "v1";
-      let version = searchParams.get("version") ?? "v1.1";
-      if (searchParams.has("version")) {
-        switch (version) {
-          case "v1.1":
-            openapi = "v1";
-            break;
-          case "v1.2":
-            openapi = "v2";
-            break;
-          default:
-            openapi = "v1";
-            break;
-        }
-      }
+      let version = (openapi = searchParams.get("version") ?? "v1");
 
       (function initOpenApi() {
         try {
@@ -75,8 +60,9 @@
                 class="form-select form-select-sm"
                 aria-label=".form-select-sm example"
               >
+              <option value="v1">v1</option>
                 <option value="v1.1">v1.1</option>
-                <option value="v1.2">v1.2</option>
+                <option value="v1.3">v1.3</option>
               </select>
             </div>
           `);
@@ -90,6 +76,104 @@
           "?version=" +
           $(this).val();
       });
+    </script>
+    <script>
+      $(document).on("click", ".auth.authorize.button", function () {
+        console.log("ok tested");
+
+        const $swaggerBox = $(".swaggerBox");
+        const $modal = $(".swagger-ui .dialog-ux .modal-ux");
+        const input = $(".auth-container input:text").val();
+
+        if (input.length > 0) {
+          setTimeout(() => {
+            $(".swagger-ui .auth-btn-wrapper .btn-done").click();
+            showMsg("success", "Successfull", "API Key attached");
+          }, 1000);
+          // const data = { username: "example" };
+          // $(
+          //   ".swagger-ui .auth-btn-wrapper .btn-done, .swagger-ui .dialog-ux .modal-ux-header .close-modal"
+          // ).click(function () {
+          //   $swaggerBox.addClass("hide").css({
+          //     visibility: "",
+          //   });
+          //   $modal.css({
+          //     visibility: "",
+          //   });
+          // });
+
+          // fetch(
+          //   "https://dev-api.omnilogistics.com/" +
+          //     version +
+          //     "/shipment/info?house_bill_nbr=5865228",
+          //   {
+          //     method: "GET",
+          //     headers: {
+          //       "Content-Type": "application/json",
+          //       "x-api-key": input,
+          //     },
+          //   }
+          // )
+          //   .then(async (response) => {
+          //     return {
+          //       status: response.status,
+          //       response: await response.json(),
+          //     };
+          //   })
+          //   .then((data) => {
+          //     // console.log("Success:", data);
+          //     if (
+          //       data.status == 401 ||
+          //       (data.status == 400 &&
+          //         data.response.hasOwnProperty("errorDescription") &&
+          //         data.response.errorDescription == "Invalid API Key")
+          //     ) {
+          //       $(".auth").click();
+          //       showMsg("error", "Error", "Invalid API Key");
+          //       modalShow();
+          //     } else {
+          //       modalHide();
+          //       showMsg("success", "Successfull", "API Key verified");
+          //     }
+          //   })
+          //   .catch((error) => {
+          //     console.error("Error:", error);
+          //     $(".auth").click();
+          //     showMsg("error", "Error", "Api key is not valid");
+          //     modalShow();
+          //   });
+        }
+      });
+
+      function modalShow() {
+        console.log("modal show");
+        $(".swaggerBox").removeClass("hide").css({
+          visibility: "hidden",
+          height: "",
+          left: "",
+          top: "",
+          width: "",
+        });
+        $(".swagger-ui .auth-wrapper .authorize.unlocked").click();
+        $(".swagger-ui .dialog-ux .modal-ux").css({
+          visibility: "visible",
+        });
+      }
+      function modalHide() {
+        $(".swaggerBox").addClass("hide").css({
+          visibility: "",
+        });
+        $(".swagger-ui .dialog-ux .modal-ux").css({
+          visibility: "",
+        });
+      }
+      function showMsg(type = "error", title, msg) {
+        Swal.fire({
+          icon: type,
+          title: title,
+          text: msg,
+        });
+      }
     </script>
   </body>
 </html>
