--- a/swagger/index.html
+++ b/swagger/index.html
@@ -66,6 +66,7 @@
                 <option value="v1.4">v1.4</option>
                 <option value="v2">v2</option>
                 <option value="v2.1">v2.1</option>
+                <option value="v2.2">v2.2</option>
               </select>
             </div>
           `);
